# pydevops_lab

./: .gitignore  .pre-commit-config.yaml  QWEN.md  README.md  mypy.ini  pyproject.toml
labs/lab1/: README.md
labs/lab1/scripts/: main.py
labs/lab1/src/: example.py  exercise.py
labs/lab1/tests/: test_main.py
labs/lab2/src/: example.py  http_feeds.feedburner.com_oreilly_radar_atom.xml  os_path_walk.py  service-policy.json  verify-apache.yml
labs/lab3/src/: argparse_example.py  click_example.py  example.py  fire_example.py  foo_plugin_a.py  foo_plugin_b.py  say_it.py  simple_click.py  simple_fire.py  simple_parse.py  simple_plugins.py  sys_argv.py
scripts/: hello.py
src/: __init__.py
tests/: __init__.py  test_hello.py
